# xorg-discord-rpc

./: .SRCINFO  CMakeLists.txt  CONFIGURATION.md  PKGBUILD  README.md  compile.sh  exampleConfig.toml  main.c  run.sh  setup.sh
assets/: README.org
discord-sdk/: README.org
include/: daemon.h  misc.h  rpc.h  rpcHelpers.h  user.h  xTools.h
lib/discord_social_sdk/: README.org
src/: daemon.cpp  main.cpp  misc.cpp  rpc.cpp  rpcHelpers.cpp  user.cpp  xTools.cpp
